--- a/Interactive_fit_main.ipynb
+++ b/Interactive_fit_main.ipynb
@@ -258,7 +258,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "02dcbb77375e4a0fb054bd91d479437a",
+       "model_id": "5742a0ab55a64c048bf50f49fb632dea",
        "version_major": 2,
        "version_minor": 0
       },
@@ -272,7 +272,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "f3e25dd145294fd3902f59d3f9607067",
+       "model_id": "eecc6b86456448748d9c3e163e6bc92b",
        "version_major": 2,
        "version_minor": 0
       },
@@ -286,7 +286,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "4e59660c9b044ee599b1b8287b5acd29",
+       "model_id": "cf2ccaeff35a4b90b10185b79806d990",
        "version_major": 2,
        "version_minor": 0
       },
@@ -300,7 +300,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "b2ece44820c441d599a762d3850b1cb8",
+       "model_id": "056bb27231e94f689c089a739c3d4e65",
        "version_major": 2,
        "version_minor": 0
       },
@@ -356,21 +356,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
     "def get_parameter(number):\n",
     "    if number == '1':\n",
-    "        parameter_set = [2.69, 0.07, 0.41]\n",
+    "        parameter_set = [3.11, 0.04, 0.51]\n",
     "    elif number == '2':\n",
     "        parameter_set = [3.11, 0.04, 0.51, 3.39, 0.04, 0.32]\n",
     "    elif number == '3':\n",
     "        parameter_set = [3.11, 0.04, 0.51, 3.39, 0.04, 0.32, 3.56, 0.04, 0.1]\n",
     "    elif number == '4':\n",
-    "        parameter_set = [3.11, 0.04, 0.51, 3.39, 0.04, 0.32, 3.56, 0.04, 0.1, 3.7, 0.06, 0.06] # start values for fitting\n",
+    "        parameter_set = [3.11, 0.04, 0.51, 3.39, 0.04, 0.32, 3.56, 0.04, 0.1, 3.7, 0.06, 0.06] \n",
     "    elif number == '5':\n",
-    "        parameter_set = [3.11, 0.04, 0.51, 3.39, 0.04, 0.32, 3.56, 0.04, 0.1, 3.7, 0.05, 0.06, 3.82, 0.04, 0.03] # start values for fitting\n",
+    "        parameter_set = [3.11, 0.04, 0.51, 3.39, 0.04, 0.32, 3.56, 0.04, 0.1, 3.7, 0.05, 0.06, 3.82, 0.04, 0.03]\n",
     "    else:\n",
     "        print('Wrong input')\n",
     "    return parameter_set\n",
@@ -386,13 +386,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "1950e081195f4630bfa8f394e25c0fbf",
+       "model_id": "e2ecf215abf44cb2b2e4320aecdc1281",
        "version_major": 2,
        "version_minor": 0
       },
@@ -418,13 +418,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "d069859a2d36402ba301d082a4f3ca11",
+       "model_id": "b155ad50b2004fa689c2bff87f132ea5",
        "version_major": 2,
        "version_minor": 0
       },
@@ -438,7 +438,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "2f3f1c94e90f4584be48bf139216cdea",
+       "model_id": "00fa4b45182c472093bf03a572b2b896",
        "version_major": 2,
        "version_minor": 0
       },
@@ -452,7 +452,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "ea2aff99c0c24d83ae6cc6f0d3e90461",
+       "model_id": "47c8fc15bdac46f68c1a45239c211b27",
        "version_major": 2,
        "version_minor": 0
       },
@@ -507,47 +507,6 @@
     "\n",
     "display(widgets.HBox([run_fit_button, fit_results]))\n",
     "display(widgets.HBox([save_button, saved]))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#import scipy.integrate as integrate\n",
-    "\n",
-    "#integral=[]\n",
-    "#integral.append(integrate.quad(defs.log_norm_func1 ,d[index_left],d[index_right], args=(params[0],params[1],params[2])))\n",
-    "#integral.append(integrate.quad(defs.log_norm_func1 ,d[index_left],d[index_right], args=(params[3],params[4],params[5])))\n",
-    "#integral.append(integrate.quad(defs.log_norm_func1 ,d[index_left],d[index_right], args=(params[6],params[7],params[8])))\n",
-    "#integral.append(integrate.quad(defs.log_norm_func1 ,d[index_left],d[index_right], args=(params[9],params[10],params[11])))\n",
-    "#integral.append(integrate.quad(defs.log_norm_func1 ,d[index_left],d[index_right], args=(params[12],params[13],params[14])))\n",
-    "\n",
-    "#for i in range(5):\n",
-    "#    value1  = integral[i][0]/integral[0][0]\n",
-    "#    value2 = params[2+3*i]/params[2]\n",
-    "#    print('%.6f, %.6f'%(value1,value2))\n",
-    "#    print(' ')\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#for i in range(15):\n",
-    "#    print(params[i])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#print(type(data))"
    ]
   },
   {
