--- a/droplet_dependencies.ipynb
+++ b/droplet_dependencies.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,7 +23,8 @@
    "outputs": [],
    "source": [
     "data = pd.read_excel('data_droplets.xlsx', sheet_name = 'Data')\n",
-    "x = np.log(data['(Q/k)'].values)\n",
+    "data.sort_values(by=['Q/k'], inplace=True)\n",
+    "x = np.log(data['Q/k'].values)\n",
     "y = np.log(data['Droplet Size [nm]'].values)\n",
     "err_y = np.log(data['Deviation Droplets'])"
    ]
@@ -37,8 +38,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[0.25063806 3.15359165]\n",
-      "[1.14295491 7.986337  ]\n"
+      "[0.3182845  2.65330883]\n",
+      "[1.13940881 7.92466863]\n"
      ]
     }
    ],
@@ -54,13 +55,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "82a1a83e6b294866a5b5f93d81c72e33",
+       "model_id": "343858c7e80745438537e42018f77c7a",
        "version_major": 2,
        "version_minor": 0
       },
@@ -86,13 +87,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "e829bf1afa214fa19ba590acf8d21ced",
+       "model_id": "124e04cbff4546fabba8131901a99289",
        "version_major": 2,
        "version_minor": 0
       },
@@ -105,12 +106,12 @@
     }
    ],
    "source": [
-    "new_x = data['(Q/k)'].values\n",
+    "new_x = data['Q/k'].values\n",
     "new_y = np.exp(popt[1])*new_x**popt[0]\n",
     "\n",
     "fig3, ax3 = plt.subplots()\n",
     "ax3.plot(new_x,new_y)\n",
-    "data.plot(x = \"(Q/k)\",y = 'Droplet Size [nm]',yerr ='Deviation Droplets', kind = 'scatter',ax = ax3, color = 'tab:orange')\n",
+    "data.plot(x = \"Q/k\",y = 'Droplet Size [nm]',yerr ='Deviation Droplets', kind = 'scatter',ax = ax3, color = 'tab:orange')\n",
     "ax3.set_xscale('log')"
    ]
   },
