--- a/droplet_dependencies.ipynb
+++ b/droplet_dependencies.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -55,13 +55,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "343858c7e80745438537e42018f77c7a",
+       "model_id": "734d1d0122b748529dad62bd89139eec",
        "version_major": 2,
        "version_minor": 0
       },
@@ -87,13 +87,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "124e04cbff4546fabba8131901a99289",
+       "model_id": "e66dd52c2b0d4415b4b57324bc287ee6",
        "version_major": 2,
        "version_minor": 0
       },
@@ -106,11 +106,10 @@
     }
    ],
    "source": [
-    "new_x = data['Q/k'].values\n",
-    "new_y = np.exp(popt[1])*new_x**popt[0]\n",
+    "y_fit = np.exp(popt[1])*data['Q/k'].values**popt[0]\n",
     "\n",
     "fig3, ax3 = plt.subplots()\n",
-    "ax3.plot(new_x,new_y)\n",
+    "ax3.plot(data['Q/k'].values,y_fit)\n",
     "data.plot(x = \"Q/k\",y = 'Droplet Size [nm]',yerr ='Deviation Droplets', kind = 'scatter',ax = ax3, color = 'tab:orange')\n",
     "ax3.set_xscale('log')"
    ]
