--- a/droplet_dependencies.ipynb
+++ b/droplet_dependencies.ipynb
@@ -18,50 +18,48 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [],
    "source": [
-    "data = pd.read_excel('data_droplets.xlsx', sheet_name = 'Data')\n",
+    "data = pd.read_excel('data_droplets.xlsx', sheet_name = 'Data', index_col = 0)\n",
     "data.sort_values(by=['Q/k'], inplace=True)\n",
     "x = np.log(data['Q/k'].values)\n",
     "y = np.log(data['Droplet Size [nm]'].values)\n",
-    "err_y = np.log(data['Deviation Droplets'])"
+    "#err_y = np.log(data['Deviation Droplets'])\n",
+    "\n",
+    "data_0500 = data.filter(like='0500', axis=0)\n",
+    "data_1500 = data.filter(like='1500', axis=0)\n",
+    "data_2000 = data.filter(like='2000', axis=0)\n",
+    "data_2500 = data.filter(like='2500', axis=0)\n",
+    "data_5000 = data.filter(like='5000', axis=0)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 54,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[0.3182845  2.65330883]\n",
-      "[1.13940881 7.92466863]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "def lin_func(x,m,n):\n",
     "    return m*x+n\n",
     "\n",
-    "popt, pcov = curve_fit(lin_func,x,y,sigma = err_y,absolute_sigma = True)\n",
-    "perr = np.sqrt(np.diag(pcov))\n",
-    "print(popt)\n",
-    "print(perr)"
+    "#popt, pcov = curve_fit(lin_func,x,y,sigma = err_y,absolute_sigma = True)\n",
+    "popt, pcov = curve_fit(lin_func,x,y)\n",
+    "#perr = np.sqrt(np.diag(pcov))\n",
+    "#print(popt)\n",
+    "#print(perr)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "734d1d0122b748529dad62bd89139eec",
+       "model_id": "4febc216d3d04012bbc0caad1e9d41d6",
        "version_major": 2,
        "version_minor": 0
       },
@@ -76,7 +74,7 @@
    "source": [
     "fig1, ax1 = plt.subplots()\n",
     "#data.plot(x = \"(Q/k)^1/2\",y = 'Droplet Size [nm]', yerr = 'Deviation Droplets' ,kind = 'scatter', ax = ax1)\n",
-    "ax1.errorbar(x,y,yerr = err_y, linestyle = 'none',marker = 'o')\n",
+    "ax1.plot(x,y, linestyle = 'none',marker = 'o')\n",
     "#ax1.set_xscale('log')\n",
     "ax1.set_xlabel('$ln(Q/\\kappa)$')\n",
     "ax1.set_ylabel('$ln(D_{Droplet})$')\n",
@@ -87,13 +85,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 97,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[-69.37150646  20.10194707]\n",
+      "[36.33445357  3.09497353]\n"
+     ]
+    }
+   ],
+   "source": [
+    "def pot_func(x,a,b):\n",
+    "    return a + b*x**(1/3)\n",
+    "\n",
+    "popt2, pcov2 = curve_fit(pot_func,data['Q/k'].values,data['Droplet Size [nm]'].values)\n",
+    "perr2 = np.sqrt(np.diag(pcov2))\n",
+    "print(popt2)\n",
+    "print(perr2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 99,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "e66dd52c2b0d4415b4b57324bc287ee6",
+       "model_id": "50c9a0f70a9f4981a5b344af344dd735",
        "version_major": 2,
        "version_minor": 0
       },
@@ -106,12 +128,51 @@
     }
    ],
    "source": [
-    "y_fit = np.exp(popt[1])*data['Q/k'].values**popt[0]\n",
+    "x_dummies = np.linspace(0.8*data['Q/k'].values[0],1.2*data['Q/k'].values[-1],100)\n",
+    "y_fit = np.exp(popt[1])*x_dummies**popt[0]\n",
+    "\n",
+    "y_hyp = 13*x_dummies**(1/3)\n",
+    "y_fit2 = pot_func(x_dummies,popt2[0],popt2[1])\n",
     "\n",
     "fig3, ax3 = plt.subplots()\n",
-    "ax3.plot(data['Q/k'].values,y_fit)\n",
-    "data.plot(x = \"Q/k\",y = 'Droplet Size [nm]',yerr ='Deviation Droplets', kind = 'scatter',ax = ax3, color = 'tab:orange')\n",
+    "#ax3.set_ylim(0,500)\n",
+    "#ax3.set_yscale('log')\n",
+    "ax3.plot(x_dummies,y_fit)\n",
+    "data_0500.plot(x = \"Q/k\",y = 'Droplet Size [nm]',yerr ='Deviation Droplets', kind = 'scatter',ax = ax3, color = 'tab:orange', label = '500')\n",
+    "data_1500.plot(x = \"Q/k\",y = 'Droplet Size [nm]',yerr ='Deviation Droplets', kind = 'scatter',ax = ax3, color = 'tab:red', label = '1500')\n",
+    "data_2000.plot(x = \"Q/k\",y = 'Droplet Size [nm]',yerr ='Deviation Droplets', kind = 'scatter',ax = ax3, color = 'tab:blue', label = '2000')\n",
+    "data_2500.plot(x = \"Q/k\",y = 'Droplet Size [nm]',yerr ='Deviation Droplets', kind = 'scatter',ax = ax3, color = 'tab:green', label = '2500')\n",
+    "data_5000.plot(x = \"Q/k\",y = 'Droplet Size [nm]',yerr ='Deviation Droplets', kind = 'scatter',ax = ax3, color = 'tab:purple', label = '5000')\n",
+    "ax3.plot(x_dummies,y_fit2)\n",
+    "\n",
+    "ax3.legend()\n",
     "ax3.set_xscale('log')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 71,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.41232070356535844 7.393927208544747\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(popt[0],np.exp(popt[1]))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 90,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plt.close('all')"
    ]
   },
   {
