--- a/droplet_dependencies.ipynb
+++ b/droplet_dependencies.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -37,9 +37,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 18,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0.39382934 2.23183851]\n"
+     ]
+    }
+   ],
    "source": [
     "def lin_func(x,m,n):\n",
     "    return m*x+n\n",
@@ -47,19 +55,19 @@
     "#popt, pcov = curve_fit(lin_func,x,y,sigma = err_y,absolute_sigma = True)\n",
     "popt, pcov = curve_fit(lin_func,x,y)\n",
     "#perr = np.sqrt(np.diag(pcov))\n",
-    "#print(popt)\n",
+    "print(popt)\n",
     "#print(perr)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "4febc216d3d04012bbc0caad1e9d41d6",
+       "model_id": "24ef55aee28a4ea59ff7601af8868c54",
        "version_major": 2,
        "version_minor": 0
       },
@@ -85,15 +93,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[-69.37150646  20.10194707]\n",
-      "[36.33445357  3.09497353]\n"
+      "[-30.74545877  18.50422826]\n",
+      "[53.90236774  4.61274323]\n"
      ]
     }
    ],
@@ -109,13 +117,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "50c9a0f70a9f4981a5b344af344dd735",
+       "model_id": "10aff390bcf847e49cf6184d3ecceefb",
        "version_major": 2,
        "version_minor": 0
       },
@@ -130,49 +138,34 @@
    "source": [
     "x_dummies = np.linspace(0.8*data['Q/k'].values[0],1.2*data['Q/k'].values[-1],100)\n",
     "y_fit = np.exp(popt[1])*x_dummies**popt[0]\n",
-    "\n",
-    "y_hyp = 13*x_dummies**(1/3)\n",
     "y_fit2 = pot_func(x_dummies,popt2[0],popt2[1])\n",
     "\n",
     "fig3, ax3 = plt.subplots()\n",
     "#ax3.set_ylim(0,500)\n",
     "#ax3.set_yscale('log')\n",
-    "ax3.plot(x_dummies,y_fit)\n",
-    "data_0500.plot(x = \"Q/k\",y = 'Droplet Size [nm]',yerr ='Deviation Droplets', kind = 'scatter',ax = ax3, color = 'tab:orange', label = '500')\n",
-    "data_1500.plot(x = \"Q/k\",y = 'Droplet Size [nm]',yerr ='Deviation Droplets', kind = 'scatter',ax = ax3, color = 'tab:red', label = '1500')\n",
-    "data_2000.plot(x = \"Q/k\",y = 'Droplet Size [nm]',yerr ='Deviation Droplets', kind = 'scatter',ax = ax3, color = 'tab:blue', label = '2000')\n",
-    "data_2500.plot(x = \"Q/k\",y = 'Droplet Size [nm]',yerr ='Deviation Droplets', kind = 'scatter',ax = ax3, color = 'tab:green', label = '2500')\n",
-    "data_5000.plot(x = \"Q/k\",y = 'Droplet Size [nm]',yerr ='Deviation Droplets', kind = 'scatter',ax = ax3, color = 'tab:purple', label = '5000')\n",
-    "ax3.plot(x_dummies,y_fit2)\n",
     "\n",
-    "ax3.legend()\n",
+    "data_0500.plot(x = \"Q/k\",y = 'Droplet Size [nm]',yerr ='Deviation Droplets', kind = 'scatter',ax = ax3, color = 'tab:orange', label = '$\\kappa = 500$')\n",
+    "data_1500.plot(x = \"Q/k\",y = 'Droplet Size [nm]',yerr ='Deviation Droplets', kind = 'scatter',ax = ax3, color = 'tab:red', label = '$\\kappa = 1500$')\n",
+    "data_2000.plot(x = \"Q/k\",y = 'Droplet Size [nm]',yerr ='Deviation Droplets', kind = 'scatter',ax = ax3, color = 'tab:blue', label = '$\\kappa = 2000$')\n",
+    "data_2500.plot(x = \"Q/k\",y = 'Droplet Size [nm]',yerr ='Deviation Droplets', kind = 'scatter',ax = ax3, color = 'tab:green', label = '$\\kappa = 2500$')\n",
+    "data_5000.plot(x = \"Q/k\",y = 'Droplet Size [nm]',yerr ='Deviation Droplets', kind = 'scatter',ax = ax3, color = 'tab:purple', label = '$\\kappa = 5000$')\n",
+    "ax3.plot(x_dummies,y_fit, label = '$%.2f \\cdot (Q/\\kappa)^{%.2f}$'%(popt[1],popt[0]), color = 'tab:blue')\n",
+    "#\n",
+    "handles, labels = ax3.get_legend_handles_labels()\n",
+    "ax3.legend(handles[::-1], labels[::-1])\n",
+    "ax3.set_ylabel('$d_D / nm$')\n",
+    "#ax3.legend()\n",
+    "ax3.set_xscale('log')\n",
     "ax3.set_xscale('log')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "0.41232070356535844 7.393927208544747\n"
-     ]
-    }
-   ],
-   "source": [
-    "print(popt[0],np.exp(popt[1]))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
-    "plt.close('all')"
+    "#plt.close('all')"
    ]
   },
   {
